staging/bms-kamra/admin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: staging
  labels:
    app: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: yashmakhija/kanal-kamara-admin:latest
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: staging
spec:
  selector:
    app: admin
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP
