staging/bms-kamra/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: staging
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: yashmakhija/kanal-kamara-backend:latest
          ports:
            - containerPort: 3091
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: staging
spec:
  type: ClusterIP # Internal service, accessible only within the cluster
  ports:
    - port: 3091            # Port on which the service is exposed
      targetPort: 3091      # Port on which the container is running
  selector:
    app: backend
